Added a H3 tag for details

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <main>
         <div class="wrapper">
+            <h3>Hover and see magic</h3>
             <div class="card front-face">
                 <img src="./image.webp" alt="">
             </div>
